tdf#130690: DOCX import: fix lost text formatting in cells

by limiting paragraph-level character property expansion
for the whole table paragraph based on all text portions.

Follow-up of commit abb9c7db8bcc06f907d39a7811711882161d5803
(tdf#130494: DOCX import: limit paragraph-level character property)

regression from 2ab481b038b62b1ff576ac4d49d03c1798cd7f84
(tdf#90069 DOCX: fix character style of new table rows)

Change-Id: I4d14fd30c9fbc8464c2430726faf16e292f24e38
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89848
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>